@@ -1,3 +1,6 @@
+    * Stop using the padlist to refcount GVs. Instead use regular magic. This
+      allows various modules, including B::Deparse, to safely peek into pads of
+      (re)named subs (Closes RT#42725) (Goro Fuji).
     * Support perl >= 5.13.3 by using the new CvGV_set interface there
       (Closes RT#59558).
     * Stop using the deprecated PL_no_symref (Closes RT#57843).
